--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <header>
-  <h1 class="logo">store | products</h1>
+  <h1 class="logo">Shanny's | Popcorn kitchen <br>
+    <img src="../assets/product-imaging/PngItem_1876137.png" style="height:100px"></h1>
 </header>
+
 <div class="products">
   <div class="products-list">
     <div class="product-item" *ngFor="let product of products">
