Modified logo - name

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header>
-  <h1 class="logo">Pop Dat ish  | Popcorn kitchen <br>
+  <h1 class="logo"><em>Pop Datish</em> | Popcorn Kitchen <br>
     <img src="../assets/product-imaging/PngItem_1876137.png" style="height:100px"></h1>
 </header>
 
