Notification - site under construction

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <header>
+  <div class="container text-center">
+    <label><em>Website currently under construction</em></label>
+  </div>
+  
   <h1 class="logo"><em>Pop Datish</em> | Popcorn Kitchen <br>
     <img src="../assets/product-imaging/PngItem_1876137.png" style="height:100px"></h1>
 </header>
