--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,9 @@
 <header>
-  <div class="container text-center">
-    <label><em>Website currently under construction</em></label>
-  </div>
-  
+ 
   <h1 class="logo"><em>Pop Datish</em> | Popcorn Kitchen <br>
     <img src="../assets/product-imaging/PngItem_1876137.png" style="height:100px"></h1>
 </header>
-
+<caption class=" text-center"><em>Website currently under construction</em></caption>
 <div class="products">
   <div class="products-list">
     <div class="product-item" *ngFor="let product of products">
