modified header notification

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,9 @@
  
   <h1 class="logo"><em>Pop Datish</em> | Popcorn Kitchen <br>
     <img src="../assets/product-imaging/PngItem_1876137.png" style="height:100px"></h1>
+    <h5>Website under construction</h5>
 </header>
-<caption class=" text-center"><em>Website currently under construction</em></caption>
+
 <div class="products">
   <div class="products-list">
     <div class="product-item" *ngFor="let product of products">
