--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
  
   <h1 class="logo"><em>Pop Datish</em> | Popcorn Kitchen <br>
     <img src="../assets/product-imaging/PngItem_1876137.png" style="height:100px"></h1>
-    <h5>Website under construction</h5>
+    <h3 class="text center">Website under construction</h3>
 </header>
 
 <div class="products">
