--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
  
   <h1 class="logo"><em>Pop Datish</em> | Popcorn Kitchen <br>
     <img src="../assets/product-imaging/PngItem_1876137.png" style="height:100px"></h1>
-    <h3 class="text center">Website under construction</h3>
+   
 </header>
-
+<div class="container text-center"><h2>Website under construction</h2></div>
 <div class="products">
   <div class="products-list">
     <div class="product-item" *ngFor="let product of products">
