--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <header>
  
   <h1 class="logo"><em>Pop Datish</em> | Popcorn Kitchen <br>
-    <img src="../assets/product-imaging/PngItem_1876137.png" style="height:100px"></h1>
-   
+    <img src="../assets/product-imaging/PngItem_1876137.png" style="height:100px"></h1>   
 </header>
-<div class="container text-center"><h2>Website under construction</h2></div>
+<div class="text-center">
+  <h2><em>Website under construction</em></h2>
+</div>
 <div class="products">
   <div class="products-list">
     <div class="product-item" *ngFor="let product of products">
