--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <header>
  
   <h1 class="logo"><em>Pop Datish</em> | Popcorn Kitchen <br>
+    <div class="text-center"><h3>This website is under construction!</h3></div>
     <img src="../assets/product-imaging/PngItem_1876137.png" style="height:100px"></h1>   
 </header>
 
