--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,9 +47,9 @@
               <input type="email" id="form5Example2" class="form-control" />
               <label class="form-label" for="form5Example2">Email address</label>
               <section class="mb-2">
-                Contact Us: 402-xxx-xxxx <br>
                 <small class="text-center">Notice: No refund exchanges within 3 days. Fee for deliveries under $20. Orders over 20 popcorn balls or more require 48hr advance notice.
-                  Orders 50 (popcorn balls) or more require deposit 1/2 down.
+                  Orders 50 (popcorn balls) or more require deposit 1/2 down. <br>
+                  Contact Us: 402-xxx-xxxx 
                 </small>
               </section>
             </div>
