--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 </header>
 
 <div class="products">
-  <button type="button" class="btn btn-link">PopCorn List</button>
+  <button type="button" class="btn btn-link">PopCorn Ball List</button>
   
   <div class="products-list">
     <div class="product-item" *ngFor="let product of products">
