modified app.component.html - descriptive message.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+
+<!--hagger_dev pushes to master-->
 <header>
  <h1 class="logo"><em>Pop Datish</em> | Popcorn Kitchen <br>
    <img src="../assets/product-imaging/PngItem_1876137.png" style="height:100px"></h1>
